# JuniorsToolbox

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists (2).txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  gen_sjis.py  generate_obj_render_info.py  imgui.ini  restructure_wizards.py  svg_to_points.py  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
AppData/: Dummy.bmd
Profiles/: Test.json
SceneAssets/: README.md
Templates/: AirportEventSink.json  AmbAry.json  AmbColor.json  Amenbo.json  AmenboManager.json  AmiKing.json  AmiNoko.json  AmiNokoManager.json  AnimalBird.json  AnimalBirdManager.json  AnimalMew.json  AreaCylinder.json  AreaSphere.json  BEelTearsManager.json  BalloonHelp.json  BalloonKoopaJr.json  BananaTree.json  BasketReverse.json  BathWater.json  Bathtub.json  BathtubKiller.json  BathtubKillerManager.json  BathtubPeach.json  BathtubPeachManager.json  BeamManager.json  BeeHive.json  BeeHiveManager.json  BellDolpicPolice.json  BellDolpicTV.json  BellWatermill.json  BiaBell.json  BiaTurnBridge.json  BiaWatermill.json  BiaWatermillVertical.json  BigWindmill.json  Billboard.json  BoardNpcManager.json  BombHei.json  BombHeiManager.json  BossDangoHamuKuri.json  (+484 more)
Templates/Custom/: ButtonSwitch.json  CannonBall.json  CannonBox.json  DarknessEffect.json  GenericRailObj.json  KeyChest.json  KeyFollow.json  LaunchStar.json  ParticleBox.json  PizzaBox.json  SoundBox.json  StarBit.json  Tornado.json  WaterMine.json
Templates/Vanilla/: AfterEffect.json  AirportEventSink.json  AirportPool.json  AirportSwitch.json  AlphaCatch.json  AmbAry.json  AmbColor.json  Amenbo.json  AmenboManager.json  AmiKing.json  AmiNoko.json  AmiNokoManager.json  AnimalBird.json  AnimalBirdManager.json  AnimalMew.json  AreaCylinder.json  AreaSphere.json  BEelTearsManager.json  BalloonHelp.json  BalloonKoopaJr.json  BananaTree.json  BasketReverse.json  BathWater.json  Bathtub.json  BathtubKiller.json  BathtubKillerManager.json  BathtubPeach.json  BathtubPeachManager.json  BeamManager.json  BeeHive.json  BeeHiveManager.json  BellDolpicPolice.json  BellDolpicTV.json  BellWatermill.json  BiaBell.json  BiaTurnBridge.json  BiaWatermill.json  BiaWatermillVertical.json  BigWindmill.json  Billboard.json  (+532 more)
Themes/: Basic Dark.theme  Basic Light.theme  BasicDark.json  BasicLight.json  Default.theme  Moonshine.theme  Sunshine.theme
cmake/: Findgit2.cmake
include/: boundbox.hpp  clonable.hpp  clone.hpp  color.hpp  error.hpp  fsystem.hpp  jsonlib.hpp  serial.hpp  smart_resource.hpp  spline.hpp  strutil.hpp  tristate.hpp  types.hpp  unique.hpp
include/bmg/: bmg.hpp
include/bti/: loader.hpp
include/core/: application.hpp  assert.hpp  clipboard.hpp  core.hpp  error.hpp  log.hpp  mathutil.hpp  memory.hpp  threaded.hpp  timing.hpp  types.hpp
include/core/action/: action.hpp
include/core/application/: application.hpp  layer.hpp
include/core/event/: event.hpp  fileevent.hpp  keyevent.hpp  mouseevent.hpp  shortcutevent.hpp  timerevent.hpp  windowevent.hpp
include/core/input/: input.hpp  keycode.hpp  mousebutton.hpp
include/core/keybind/: keybind.hpp
include/core/mimedata/: mimedata.hpp
include/core/time/: timepoint.hpp  timestep.hpp
include/dolphin/: hook.hpp  process.hpp  watch.hpp
include/dolphin/interpreter/: machine.hpp  memory.hpp  processor.hpp  registers.hpp  system.hpp
include/game/: task.hpp  watch.hpp
include/github/: clone.hpp  credentials.hpp  releases.hpp
include/gui/: application.hpp  clipboard.hpp  context.hpp  context_menu.hpp  font.hpp  imfilebrowser.h  imgui_ext.hpp  input.hpp  keybind.hpp  modal.hpp  modelcache.hpp  selection.hpp  settings.hpp  themes.hpp  util.hpp  window.hpp
include/gui/appmain/: application.hpp  window.hpp
include/gui/bootstrap/: application.hpp
include/gui/debugger/: dialog.hpp  window.hpp
include/gui/dolphin/: overlay.hpp
include/gui/dragdrop/: dragaction.hpp  dragdropmanager.hpp  dropaction.hpp  source.hpp  target.hpp
include/gui/event/: contextmenuevent.hpp  dragevent.hpp  dropevent.hpp  event.hpp  (+2 more)
include/image/: imagebuilder.hpp  imagedata.hpp  imagehandle.hpp
include/model/: bmgmodel.hpp  fsmodel.hpp  memscanmodel.hpp  model.hpp  objmodel.hpp  railmodel.hpp  selection.hpp  watchmodel.hpp
include/objlib/: errors.hpp  metavalue.hpp  nameref.hpp  object.hpp  qualname.hpp  template.hpp  transform.hpp  utf8_to_sjis.hpp
include/pad/: linkdata.hpp  pad.hpp
include/platform/: audio.hpp  capture.hpp  process.hpp  service.hpp  webbrowser.hpp
include/project/: config.hpp  project.hpp
include/rail/: node.hpp  rail.hpp
include/rarc/: rarc.hpp
include/resource/: resource.hpp
include/scene/: components.hpp  entity.hpp  hierarchy.hpp  layout.hpp  rail.hpp  raildata.hpp  scene.hpp
include/szs/: szs.hpp
include/watchdog/: fswatchdog.hpp
lib/: FileWatch.hpp  IconsForkAwesome.h  entt.hpp  imgui.cmake
lib/libgcm/: gcm.cpp  gcm.hpp
lib/librii/: SZS.cpp  SZS.hpp
lib/stb/: stb_image.h  stb_image_resize2.h  stb_image_write.h
src/: main.cpp  serial.cpp  spline.cpp  unique.cpp
src/bmg/: bmg.cpp
src/dolphin/: capture.cpp  hook.cpp  process.cpp  watch.cpp
src/game/: task.cpp
src/github/: clone.cpp  credentials.cpp
src/gui/: application.cpp  camera.cpp  clipboard.cpp  context.cpp  font.cpp  imgui.cpp  imgui_ext.cpp  input.cpp  keybind.cpp  modal.cpp  modelcache.cpp  selection.cpp  settings.cpp  themes.cpp  util.cpp  window.cpp
src/image/: imagebuilder.cpp  imagedata.cpp  imagehandle.cpp  stbi.cpp
src/model/: bmgmodel.cpp  fsmodel.cpp  history.cpp  memscanmodel.cpp  objmodel.cpp  railmodel.cpp  selection.cpp  transformer.cpp  watchmodel.cpp
src/objlib/: metavalue.cpp  object.cpp  template.cpp  template_cache.cpp
src/pad/: linkdata.cpp  pad.cpp
src/platform/: audio.cpp  capture.cpp  process.cpp  service.cpp  webbrowser.cpp
src/project/: config.cpp  project.cpp
src/rail/: node.cpp  rail.cpp
src/rarc/: rarc.cpp
src/resource/: resource.cpp
src/scene/: layout.cpp  rail.cpp  raildata.cpp  scene.cpp
src/watchdog/: fswatchdog.cpp
(+209 files in other folders)
